# grox

./: .env.example  Cargo.toml  LICENSE  README.md
docs/plans/: phase3a-runtime-api-hardening.md
src/: agent.rs  api.rs  checkpoint.rs  command_registry.rs  compaction.rs  context_assembler.rs  file_index.rs  main.rs  model_profile.rs  permissions.rs  prompt.rs  renderer.rs  repo_context.rs  rewind.rs  session.rs  tools.rs  util.rs
src/fixtures/: encrypted_reasoning_response.jsonl  encrypted_reasoning_response.sse  error_response.sse  happy_path_text_and_tool_call.jsonl  happy_path_text_and_tool_call.sse  reasoning_response.jsonl  reasoning_response.sse
