[package]
name = "grox"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream", "json"] }
reqwest-eventsource = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
colored = "3"
rustyline = "15"
futures = "0.3"
dotenvy = "0.15"

[dev-dependencies]
tempfile = "3"
