[package]
name = "grox-cli"
version = "0.1.1"
edition = "2024"
description = "Agentic coding with Grok"
license = "MIT"
repository = "https://github.com/dominicva/grox"
keywords = ["grok", "xai", "agent", "coding", "cli"]
categories = ["command-line-utilities", "development-tools"]
exclude = ["docs/", "PLAN.md", "TODOS.md"]

[[bin]]
name = "grox"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
colored = "3"
rustyline = "15"
eventsource-stream = "0.2"
futures = "0.3"
dotenvy = "0.15"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
regex = "1"
uuid = { version = "1.23.0", features = ["v4"] }
chrono = { version = "0.4.44", features = ["serde"] }
syntect = { version = "5.3.0", features = ["default-themes", "default-syntaxes"] }

[dev-dependencies]
tempfile = "3"
